Update some details, add createUser and changePassword
